Ported sources from 2.3.0 (without bluecove dependencies)