@@ -14,16 +14,25 @@ package org.openhab.binding.sma.internal;
 
 import static org.openhab.binding.sma.internal.SmaBindingConstants.*;
 
+import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.sma.internal.handler.SmaBridgeHandler;
+import org.openhab.binding.sma.internal.handler.SmaHandler;
+import org.openhab.core.i18n.LocaleProvider;
+import org.openhab.core.i18n.TranslationProvider;
+import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.binding.BaseThingHandlerFactory;
 import org.openhab.core.thing.binding.ThingHandler;
 import org.openhab.core.thing.binding.ThingHandlerFactory;
+import org.osgi.service.component.ComponentContext;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
 
 /**
  * The {@link SmaHandlerFactory} is responsible for creating things and thing
@@ -35,7 +44,18 @@ import org.osgi.service.component.annotations.Component;
 @Component(configurationPid = "binding.sma", service = ThingHandlerFactory.class)
 public class SmaHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_SAMPLE);
+    private ComponentContext componentContext;
+
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_BRIDGE, THING_TYPE_INVERTER);
+
+    public static final Set<ThingTypeUID> DISCOVERABLE_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_INVERTER);
+
+    @Activate
+    public SmaHandlerFactory(final @Reference LocaleProvider localeProvider,
+            final @Reference TranslationProvider i18nProvider, ComponentContext componentContext) {
+        super.activate(componentContext);
+        this.componentContext = componentContext;
+    }
 
     @Override
     public boolean supportsThingType(ThingTypeUID thingTypeUID) {
@@ -46,7 +66,10 @@ public class SmaHandlerFactory extends BaseThingHandlerFactory {
     protected @Nullable ThingHandler createHandler(Thing thing) {
         ThingTypeUID thingTypeUID = thing.getThingTypeUID();
 
-        if (THING_TYPE_SAMPLE.equals(thingTypeUID)) {
+        if (thingTypeUID.equals(THING_TYPE_BRIDGE)) {
+            return new SmaBridgeHandler((Bridge) thing, componentContext.getBundleContext());
+        }
+        if (thingTypeUID.equals(THING_TYPE_INVERTER)) {
             return new SmaHandler(thing);
         }
 
